--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-<div class="container">
-        <ul class="nav justify-content-end" style="background-color: teal; width: 250px; float: left;">
+<div class="container" style="background-image: url('../basic-portfolio/assets/images/cork-board.png');">
+        <ul class="nav justify-content-end" style="background-color: teal; border: 1px solid #cccccc; width: 250px; float: left;">
                 <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Howard Daniels</a>
+                        <a class="nav-link active" href="index.html" style="color: white;">Howard Daniels</a>
                       </li>
                     </ul>
-                    <ul class="nav justify-content-end" style="background-color: white; width: 800px; float: left;">        
+                    <ul class="nav justify-content-end" style="background-color: white; border: 1px solid #cccccc; width: 800px; float: left;">        
                 <li class="nav-item">
                   <a class="nav-link active" href="index.html">About Me</a>
                 </li>
@@ -27,15 +27,17 @@
                 </li>
               </ul>
               </div>
-              <br>
-              <div class="text-nowrap bd-highlight" style="width: 32rem;">
+              <br><br><br>
+              <div class="container" style="background-color: white; border: 1px solid #cccccc; width: 1050px; margin-left: 215px;">
+              <div class="text-wrap bd-highlight" style="width: 1000px; margin-left: 10px">
                 <p class="text-center">
-        <p style="text-indent: 100px;">I am currently attending the George Washington University coding boot camp in Arlington, VA. I am relatively new to coding, and I am taking the course to enter into the IT field.</p>
-        <p style="text-indent: 100px;">I graduated from Roanoke College with a Bachelor of Arts in International Relations in 2018. I have lived in Roanoke, Virginia; Wilmington, Delaware; and Alexandria, Virginia.</p>
-        <p style="text-indent: 100px;">In addition to learning to be a full-stack developer, I speak fluent German, and my goal is to work as a developer in a German-speaking country.</p>
-        <p style="text-indent: 100px;">When I'm not coding, I enjoy running and traveling. I ran cross country and track and field in high school and college, and I recently traveled to Austria to visit relatives.</p>
+        <p style="text-indent: 20px;">I am currently attending the George Washington University coding boot camp in Arlington, VA. I am relatively new to coding, and I am taking the course to enter into the IT field.</p>
+        <p style="text-indent: 20px;">I graduated from Roanoke College with a Bachelor of Arts in International Relations in 2018. I have lived in Roanoke, Virginia; Wilmington, Delaware; and Alexandria, Virginia.</p>
+        <p style="text-indent: 20px;">In addition to learning to be a full-stack developer, I speak fluent German, and my goal is to work as a developer in a German-speaking country.</p>
+        <p style="text-indent: 20px;">When I'm not coding, I enjoy running and traveling. I ran cross country and track and field in high school and college, and I recently traveled to Austria to visit relatives.</p>
                 </p>
             </div>
+          </div>
             <div class="card-footer text-muted">
             </div>
 
