--- a/index.html
+++ b/index.html
@@ -2,20 +2,17 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Form Demo</title>
 
-  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-<div class="container" style="background-image: url('../basic-portfolio/assets/images/cork-board.png');">
-        <ul class="nav justify-content-end" style="background-color: teal; border: 1px solid #cccccc; width: 250px; float: left;">
-                <li class="nav-item">
-                        <a class="nav-link active" href="index.html" style="color: white;">Howard Daniels</a>
-                      </li>
-                    </ul>
-                    <ul class="nav justify-content-end" style="background-color: white; border: 1px solid #cccccc; width: 800px; float: left;">        
+<div class="container">
+        <div class="container" id="nav-one">
+          <div id="name"><strong>Howard Daniels</strong></div>
+        </div>
+                    <ul class="nav justify-content-end" id="nav-two">        
                 <li class="nav-item">
                   <a class="nav-link active" href="index.html">About Me</a>
                 </li>
@@ -27,20 +24,23 @@
                 </li>
               </ul>
               </div>
-              <br><br><br>
-              <div class="container" style="background-color: white; border: 1px solid #cccccc; width: 1050px; margin-left: 215px;">
-              <div class="text-wrap bd-highlight" style="width: 1000px; margin-left: 10px">
+              <div class="container" id="main-background">
+              <div class="container" id="bio-para-box">
+                <div class="para-head"><strong>About Me</strong></div>
+                <hr>
+              <div class="text-wrap bd-highlight">
                 <p class="text-center">
-        <p style="text-indent: 20px;">I am currently attending the George Washington University coding boot camp in Arlington, VA. I am relatively new to coding, and I am taking the course to enter into the IT field.</p>
-        <p style="text-indent: 20px;">I graduated from Roanoke College with a Bachelor of Arts in International Relations in 2018. I have lived in Roanoke, Virginia; Wilmington, Delaware; and Alexandria, Virginia.</p>
-        <p style="text-indent: 20px;">In addition to learning to be a full-stack developer, I speak fluent German, and my goal is to work as a developer in a German-speaking country.</p>
-        <p style="text-indent: 20px;">When I'm not coding, I enjoy running and traveling. I ran cross country and track and field in high school and college, and I recently traveled to Austria to visit relatives.</p>
+                    <img src="assets/images/linkedinprofile.png" id="profile">
+        <p class="body-text">I am currently attending the George Washington University coding boot camp in Arlington, VA. I am relatively new to coding, and I am taking the course to enter into the IT field.</p>
+        <p class="body-text">I graduated from Roanoke College with a Bachelor of Arts in International Relations in 2018. I have lived in Roanoke, Virginia; Wilmington, Delaware; and Alexandria, Virginia.</p>
+        <p class="body-text">In addition to learning to be a full-stack developer, I speak fluent German, and my goal is to work as a developer in a German-speaking country.</p>
+        <p class="body-text">When I'm not coding, I enjoy running and traveling. I ran cross country and track and field in high school and college, and I recently traveled to Austria to visit relatives.</p>
                 </p>
             </div>
           </div>
+        </div>
             <div class="card-footer text-muted">
             </div>
-
                   </div>      
 </body>
 </html>
