--- a/index.html
+++ b/index.html
@@ -8,39 +8,53 @@
 </head>
 
 <body>
-<div class="container">
-        <div class="container" id="nav-one">
-          <div id="name"><strong>Howard Daniels</strong></div>
-        </div>
-                    <ul class="nav justify-content-end" id="nav-two">        
-                <li class="nav-item">
-                  <a class="nav-link active" href="index.html">About Me</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-              </ul>
-              </div>
-              <div class="container" id="main-background">
-              <div class="container" id="bio-para-box">
-                <div class="para-head"><strong>About Me</strong></div>
-                <hr>
-              <div class="text-wrap bd-highlight">
-                <p class="text-center">
-                    <img src="assets/images/linkedinprofile.png" id="profile">
-        <p class="body-text">I am currently attending the George Washington University coding boot camp in Arlington, VA. I am relatively new to coding, and I am taking the course to enter into the IT field.</p>
-        <p class="body-text">I graduated from Roanoke College with a Bachelor of Arts in International Relations in 2018. I have lived in Roanoke, Virginia; Wilmington, Delaware; and Alexandria, Virginia.</p>
-        <p class="body-text">In addition to learning to be a full-stack developer, I speak fluent German, and my goal is to work as a developer in a German-speaking country.</p>
-        <p class="body-text">When I'm not coding, I enjoy running and traveling. I ran cross country and track and field in high school and college, and I recently traveled to Austria to visit relatives.</p>
-                </p>
-            </div>
-          </div>
-        </div>
-            <div class="card-footer text-muted">
-            </div>
-                  </div>      
+  <div class="row">
+      <div class="col-md-3" id="nav-one">
+        <div id="name"><strong>Howard Daniels</strong></div>
+      </div>
+
+      <div class="col-md-9">
+        <ul class="nav justify-content-end" id="nav-two">        
+          <li class="nav-item">
+              <a class="nav-link active" href="index.html">About Me</a>
+          </li>
+
+          <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+
+          <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+        </ul>
+      </div>
+  </div>
+
+  <div class="row" id="main-background">
+
+    <div class="row" id="bio-para-box">
+      <div class="para-head"><strong>About Me</strong></div>
+      <hr>
+     <div class="text-wrap bd-highlight">
+        <p class="text-center">
+
+          <img src="assets/images/linkedinprofile.png" id="profile">
+          <p class="body-text">I am currently attending the George Washington University coding boot camp in Arlington, VA. I am relatively new to coding, and I am taking the course to enter into the IT field.</p>
+          <p class="body-text">I graduated from Roanoke College with a Bachelor of Arts in International Relations in 2018. I have lived in Roanoke, Virginia; Wilmington, Delaware; and Alexandria, Virginia.</p>
+          <p class="body-text">In addition to learning to be a full-stack developer, I speak fluent German, and my goal is to work as a developer in a German-speaking country.</p>
+          <p class="body-text">When I'm not coding, I enjoy running and traveling. I ran cross country and track and field in high school and college, and I recently traveled to Austria to visit relatives.</p>
+
+        </p>
+    </div>
+
+  </div>
+
+</div>
+
+<div class="card-footer text-muted">
+
+</div>
+    
 </body>
+
 </html>
