updated projects on Bootstrap portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,31 +42,31 @@
 
           <div class="col-md-2" id="project-box-1">
             <div class="name-banner">
-              <a href="../../Activities/Day01/FirstHTMLExercise/index.html">Project 1: My First HTML Exercise</a>
+              <a href="../password-generator/index.html">Project 1: Password Generator</a>
             </div>
           </div>
 
           <div class="col-md-2" id="project-box-2">
             <div class="name-banner">
-              <a href="../../Activites/Day04/Activity2/Platypus/index.html">Project 2: My Favorite Animal</a>
+              <a href="../day-planner/index.html">Project 2: Day Planner</a>
             </div>
           </div>
 
           <div class="col-md-2" id="project-box-3">
             <div class="name-banner">
-              Project 3
+              <a href="../code-quiz/index.html">Project 3: Code Quiz</a>
             </div>
           </div>
 
           <div class="col-md-2" id="project-box-4">
             <div class="name-banner">
-              Project 4
+              <a href="../weather-dashboard/index.html">Project 4: Weather Dashboard</a>
             </div>
           </div>
 
           <div class="col-md-2" id="project-box-5">
             <div class="name-banner">
-              Project 5
+              <a href="../the-daily-mesh/index.html">Project 5: The Daily Mesh</a>
             </div>
           </div>
 
