updated the portfolio page with links in the footer to the other portfolio versions

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,13 +48,13 @@
 
           <div class="col-md-2" id="project-box-2">
             <div class="name-banner">
-              <a href="../day-planner/index.html">Project 2: Day Planner</a>
+              <a href="../code-quiz/index.html">Project 2: Code Quiz</a>
             </div>
           </div>
 
           <div class="col-md-2" id="project-box-3">
             <div class="name-banner">
-              <a href="../code-quiz/index.html">Project 3: Code Quiz</a>
+              <a href="../day-planner/index.html">Project 3: Day Planner</a>
             </div>
           </div>
 
@@ -77,8 +77,8 @@
     </div>
   </div>
 
-  <div class="card-footer text-muted">
-
+  <div class="card-footer">
+    This portfolio also is available in <a href="https://howarddaniels.github.io/basic-portfolio">basic</a> and <a href="https://howarddaniels.github.io/responsive-portfolio">responsive</a> versions.
   </div>
 
 </body>
