got the horizontal line on the main box to show up on all three pages

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <div class="row" id="main-background">
 
-    <div class="row" id="bio-para-box">
+    <div id="bio-para-box">
       <div class="para-head"><strong>About Me</strong></div>
       <hr>
      <div class="text-wrap bd-highlight">
