moved the links to the other portfolio versions onto the main box

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
               <a href="../the-daily-mesh/index.html">Project 5: The Daily Mesh</a>
             </div>
           </div>
-
+          <p>This portfolio also is available in <a href="https://howarddaniels.github.io/basic-portfolio">basic</a> and <a href="https://howarddaniels.github.io/responsive-portfolio">responsive</a> versions.</p>
         </div>
       </p>
       </div>
@@ -78,7 +78,6 @@
   </div>
 
   <div class="card-footer">
-    This portfolio also is available in <a href="https://howarddaniels.github.io/basic-portfolio">basic</a> and <a href="https://howarddaniels.github.io/responsive-portfolio">responsive</a> versions.
   </div>
 
 </body>
