changed links on the portfolio to be the live Github.io links

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,31 +42,31 @@
 
           <div class="col-md-2" id="project-box-1">
             <div class="name-banner">
-              <a href="../password-generator/index.html">Project 1: Password Generator</a>
+              <a href="https://howarddaniels.github.io/password-generator/index.html">Project 1: Password Generator</a>
             </div>
           </div>
 
           <div class="col-md-2" id="project-box-2">
             <div class="name-banner">
-              <a href="../code-quiz/index.html">Project 2: Code Quiz</a>
+              <a href="https://howarddaniels.github.io/code-quiz/index.html">Project 2: Code Quiz</a>
             </div>
           </div>
 
           <div class="col-md-2" id="project-box-3">
             <div class="name-banner">
-              <a href="../day-planner/index.html">Project 3: Day Planner</a>
+              <a href="https://howarddaniels.github.io/day-planner/index.html">Project 3: Day Planner</a>
             </div>
           </div>
 
           <div class="col-md-2" id="project-box-4">
             <div class="name-banner">
-              <a href="../weather-dashboard/index.html">Project 4: Weather Dashboard</a>
+              <a href="https://howarddaniels.github.io/weather-dashboard/index.html">Project 4: Weather Dashboard</a>
             </div>
           </div>
 
           <div class="col-md-2" id="project-box-5">
             <div class="name-banner">
-              <a href="../the-daily-mesh/index.html">Project 5: The Daily Mesh</a>
+              <a href="https://howarddaniels.github.io/the-daily-mesh/index.html">Project 5: The Daily Mesh</a>
             </div>
           </div>
           <p>This portfolio also is available in <a href="https://howarddaniels.github.io/basic-portfolio">basic</a> and <a href="https://howarddaniels.github.io/responsive-portfolio">responsive</a> versions.</p>
