added links to websites and repositories under the boxes

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,9 +69,22 @@
               <a href="https://howarddaniels.github.io/the-daily-mesh/index.html">Project 5: The Daily Mesh</a>
             </div>
           </div>
-          <p>This portfolio also is available in <a href="https://howarddaniels.github.io/basic-portfolio">basic</a> and <a href="https://howarddaniels.github.io/responsive-portfolio">responsive</a> versions.</p>
         </div>
-      </p>
+          <br>
+          <div id="portfolio-text">
+          <p>This portfolio also is available in <a href="https://howarddaniels.github.io/basic-portfolio">basic</a> and <a href="https://howarddaniels.github.io/responsive-portfolio">responsive</a> versions.</p>
+          <br>
+          <p>Links to the projects and their repositories:</p>
+          <ul>
+          <li>Password Generator: creates a strong, randomized password <a href="https://howarddaniels.github.io/password-generator/index.html">Link</a> <a href="https://github.com/HowardDaniels/password-generator">Repository</a></li>
+          <li>Code Quiz: tests your knowledge of JavaScript <a href="https://howarddaniels.github.io/code-quiz/index.html">Link</a> <a href="https://github.com/HowardDaniels/code-quiz">Repository</a></li>
+          <li>Day Planner: organizes your daily work schedule <a href="https://howarddaniels.github.io/day-planner/index.html">Link</a> <a href="https://github.com/HowardDaniels/day-planner">Repository</a></li>
+          <li>Weather Dashboard: gives you the current weather and 5-day forecast for any city in the world <a href="https://github.com/HowardDaniels/weather-dashboard/index.html">Link</a> <a href="https://github.com/HowardDaniels/weather-dashboard">Repository</a></li>
+          <li>The Daily Mesh: provides news, weather, and stocks all on one website <a href="https://github.com/HowardDaniels/the-daily-mesh/index.html">Link</a> <a href="https://github.com/HowardDaniels/the-daily-mesh">Repository</a></li>
+          </ul>
+          </div>
+          <br>
+        </div>
       </div>
       
     </div>
