added GitHub, LinkedIn, email, and phone links to the footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -91,6 +91,7 @@
   </div>
 
   <div class="card-footer">
+    <p><a href="https://github.com/HowardDaniels">https://github.com/HowardDaniels</a> ~ <a href="https://www.linkedin.com/in/danielshoward/">https://www.linkedin.com/in/danielshoward/</a> ~ <a href="hdaniels13tat@gmail.com">hdaniels13tat@gmail.com</a> ~ <a href="tel:+15405980488">(540) 598-0488</a></p>
   </div>
 
 </body>
