added resume link

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
           <div class="form-group">
             <label for="exampleFormControlInput1" class="body-text">Email</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1">
+            <input id="email" type="email" class="form-control" id="exampleFormControlInput1">
           </div>
 
           <!--<br>-->
@@ -60,7 +60,7 @@
 
          <!--<br>-->
 
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button id="submit" type="submit" class="btn btn-primary" action="mailto:hdaniels13tat@gmail.com">Submit</button>
 
         </form>
                     
