added projects 6-10 to the portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
       <div class="text-wrap bd-highlight">
       <p class="text-center">
 
-        <div class="row" id="picture-row">
+        <div class="row" id="picture-row-1">
 
           <div class="col-md-2" id="project-box-1">
             <div class="name-banner">
@@ -69,6 +69,39 @@
               <a href="https://howarddaniels.github.io/the-daily-mesh/index.html">Project 5: The Daily Mesh</a>
             </div>
           </div>
+        </div>
+        <div class="row" id="picture-row-2">
+
+          <div class="col-md-2" id="project-box-6">
+            <div class="name-banner">
+              <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 6: Developer Profile Generator</a>
+            </div>
+          </div>
+
+          <div class="col-md-2" id="project-box-7">
+            <div class="name-banner">
+              <a href="https://github.com/HowardDaniels/employee-summary">Project 7: Employee Summary</a>
+            </div>
+          </div>
+
+          <div class="col-md-2" id="project-box-8">
+            <div class="name-banner">
+              <a href="https://github.com/HowardDaniels/note-taker">Project 8: Note Taker</a>
+            </div>
+          </div>
+
+          <div class="col-md-2" id="project-box-9">
+            <div class="name-banner">
+              <a href="https://github.com/HowardDaniels/employee-tracker">Project 9: Employee Tracker</a>
+            </div>
+          </div>
+
+          <div class="col-md-2" id="project-box-10">
+            <div class="name-banner">
+              <a href=" https://dashboard.heroku.com/apps/tranquil-dusk-35562">Project 10: Burger Logger</a>
+            </div>
+          </div>
+
         </div>
           <br>
           <div id="portfolio-text">
