added a third row for projects 11-15

--- a/portfolio.html
+++ b/portfolio.html
@@ -103,6 +103,9 @@
           </div>
 
         </div>
+        <div class="row" id="picture-row-3">
+
+        </div>
           <br>
           <div id="portfolio-text">
           <p>This portfolio also is available in <a href="https://howarddaniels.github.io/basic-portfolio">basic</a> and <a href="https://howarddaniels.github.io/responsive-portfolio">responsive</a> versions.</p>
