add project boxes to third row

--- a/portfolio.html
+++ b/portfolio.html
@@ -105,6 +105,36 @@
         </div>
         <div class="row" id="picture-row-3">
 
+          <div class="col-md-2" id="project-box-11">
+            <div class="name-banner">
+              <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 6: Developer Profile Generator</a>
+            </div>
+          </div>
+
+          <div class="col-md-2" id="project-box-12">
+            <div class="name-banner">
+              <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 6: Developer Profile Generator</a>
+            </div>
+          </div>
+
+          <div class="col-md-2" id="project-box-13">
+            <div class="name-banner">
+              <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 6: Developer Profile Generator</a>
+            </div>
+          </div>
+
+          <div class="col-md-2" id="project-box-14">
+            <div class="name-banner">
+              <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 6: Developer Profile Generator</a>
+            </div>
+          </div>
+
+          <div class="col-md-2" id="project-box-15">
+            <div class="name-banner">
+              <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 6: Developer Profile Generator</a>
+            </div>
+          </div>
+
         </div>
           <br>
           <div id="portfolio-text">
