edited hyperlinks for projects 11-12

--- a/portfolio.html
+++ b/portfolio.html
@@ -107,13 +107,13 @@
 
           <div class="col-md-2" id="project-box-11">
             <div class="name-banner">
-              <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 11: Developer Profile Generator</a>
+              <a href="https://github.com/HowardDaniels/reverse-engineering-code">Project 11: Reverse Engineering Code</a>
             </div>
           </div>
 
           <div class="col-md-2" id="project-box-12">
             <div class="name-banner">
-              <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 12: Developer Profile Generator</a>
+              <a href="https://infinite-inlet-20359.herokuapp.com/">Project 12: Movie Magic</a>
             </div>
           </div>
 
