--- a/portfolio.html
+++ b/portfolio.html
@@ -119,19 +119,19 @@
 
           <div class="col-md-2" id="project-box-13">
             <div class="name-banner">
-              <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 13: Developer Profile Generator</a>
+              <!-- <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 13: Developer Profile Generator</a> -->
             </div>
           </div>
 
           <div class="col-md-2" id="project-box-14">
             <div class="name-banner">
-              <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 14: Developer Profile Generator</a>
+              <!-- <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 14: Developer Profile Generator</a> -->
             </div>
           </div>
 
           <div class="col-md-2" id="project-box-15">
             <div class="name-banner">
-              <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 15: Developer Profile Generator</a>
+              <!-- <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 15: Developer Profile Generator</a> -->
             </div>
           </div>
 
