added to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
           <li>Day Planner: organizes your daily work schedule <a href="https://howarddaniels.github.io/day-planner/index.html">Link</a> <a href="https://github.com/HowardDaniels/day-planner">Repository</a></li>
           <li>Weather Dashboard: gives you the current weather and 5-day forecast for any city in the world <a href="https://github.com/HowardDaniels/weather-dashboard/index.html">Link</a> <a href="https://github.com/HowardDaniels/weather-dashboard">Repository</a></li>
           <li>The Daily Mesh: provides news, weather, and stocks all on one website <a href="https://github.com/HowardDaniels/the-daily-mesh/index.html">Link</a> <a href="https://github.com/HowardDaniels/the-daily-mesh">Repository</a></li>
-          <li>Developer Profile Generator</li>
+          <li>Developer Profile Generator: creates a resume profile for developers linking to their GitHub account</li>
           </ul>
           </div>
           <br>
