added employee summary to list of projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -148,6 +148,7 @@
           <li>Weather Dashboard: gives you the current weather and 5-day forecast for any city in the world <a href="https://github.com/HowardDaniels/weather-dashboard/index.html">Link</a> <a href="https://github.com/HowardDaniels/weather-dashboard">Repository</a></li>
           <li>The Daily Mesh: provides news, weather, and stocks all on one website <a href="https://github.com/HowardDaniels/the-daily-mesh/index.html">Link</a> <a href="https://github.com/HowardDaniels/the-daily-mesh">Repository</a></li>
           <li>Developer Profile Generator: creates a resume profile for developers linking to their GitHub account</li>
+          <li>Employee Summary: provides a summary of managers, engineers, and interns on a developer team</li>
           </ul>
           </div>
           <br>
