added note taker to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -149,6 +149,7 @@
           <li>The Daily Mesh: provides news, weather, and stocks all on one website <a href="https://github.com/HowardDaniels/the-daily-mesh/index.html">Link</a> <a href="https://github.com/HowardDaniels/the-daily-mesh">Repository</a></li>
           <li>Developer Profile Generator: creates a resume profile for developers linking to their GitHub account</li>
           <li>Employee Summary: provides a summary of managers, engineers, and interns on a developer team</li>
+          <li>Note Taker: an application for writing and saving notes</li>
           </ul>
           </div>
           <br>
