added employee tracker to portfolio list

--- a/portfolio.html
+++ b/portfolio.html
@@ -150,6 +150,7 @@
           <li>Developer Profile Generator: creates a resume profile for developers linking to their GitHub account</li>
           <li>Employee Summary: provides a summary of managers, engineers, and interns on a developer team</li>
           <li>Note Taker: an application for writing and saving notes</li>
+          <li>Employee Tracker: uses NPM Express and MySQL to allow users to add, update, and view employee information with a command line application</li>
           </ul>
           </div>
           <br>
