added and updated links to projects and their repositories

--- a/portfolio.html
+++ b/portfolio.html
@@ -142,15 +142,18 @@
           <br>
           <p>Links to the projects and their repositories:</p>
           <ul>
-          <li>Password Generator: creates a strong, randomized password <a href="https://howarddaniels.github.io/password-generator/index.html">Link</a> <a href="https://github.com/HowardDaniels/password-generator">Repository</a></li>
-          <li>Code Quiz: tests your knowledge of JavaScript <a href="https://howarddaniels.github.io/code-quiz/index.html">Link</a> <a href="https://github.com/HowardDaniels/code-quiz">Repository</a></li>
-          <li>Day Planner: organizes your daily work schedule <a href="https://howarddaniels.github.io/day-planner/index.html">Link</a> <a href="https://github.com/HowardDaniels/day-planner">Repository</a></li>
-          <li>Weather Dashboard: gives you the current weather and 5-day forecast for any city in the world <a href="https://github.com/HowardDaniels/weather-dashboard/index.html">Link</a> <a href="https://github.com/HowardDaniels/weather-dashboard">Repository</a></li>
-          <li>The Daily Mesh: provides news, weather, and stocks all on one website <a href="https://github.com/HowardDaniels/the-daily-mesh/index.html">Link</a> <a href="https://github.com/HowardDaniels/the-daily-mesh">Repository</a></li>
-          <li>Developer Profile Generator: creates a resume profile for developers linking to their GitHub account</li>
-          <li>Employee Summary: provides a summary of managers, engineers, and interns on a developer team</li>
-          <li>Note Taker: an application for writing and saving notes</li>
-          <li>Employee Tracker: uses NPM Express and MySQL to allow users to add, update, and view employee information with a command line application</li>
+          <li>Password Generator: creates a strong, randomized password <a href="https://howarddaniels.github.io/password-generator">Link</a> <a href="https://github.com/HowardDaniels/password-generator">Repository</a></li>
+          <li>Code Quiz: tests your knowledge of JavaScript <a href="https://howarddaniels.github.io/code-quiz">Link</a> <a href="https://github.com/HowardDaniels/code-quiz">Repository</a></li>
+          <li>Day Planner: organizes your daily work schedule <a href="https://howarddaniels.github.io/day-planner">Link</a> <a href="https://github.com/HowardDaniels/day-planner">Repository</a></li>
+          <li>Weather Dashboard: gives you the current weather and 5-day forecast for any city in the world <a href="https://howarddaniels.github.io/weather-dashboard">Link</a> <a href="https://github.com/HowardDaniels/weather-dashboard">Repository</a></li>
+          <li>The Daily Mesh: provides news, weather, and stocks all on one website <a href="https://howarddaniels.github.io/the-daily-mesh">Link</a> <a href="https://github.com/HowardDaniels/the-daily-mesh">Repository</a></li>
+          <li>Developer Profile Generator: creates a resume profile for developers linking to their GitHub account <a href="https://github.com/HowardDaniels/developer-profile-generator">Repository</a></li>
+          <li>Employee Summary: provides a summary of managers, engineers, and interns on a developer team <a href="https://github.com/HowardDaniels/employee-summary">Repository</a></li>
+          <li>Note Taker: writes and saves notes <a href="https://github.com/HowardDaniels/note-taker">Repository</a></li>
+          <li>Employee Tracker: uses NPM Express and MySQL to allow users to add, update, and view employee information with a command line application <a href="https://github.com/HowardDaniels/employee-tracker">Repository</a></li>
+          <li>Burger Logger: keeps track of burgers that have and haven't been eaten yet <a href="https://github.com/HowardDaniels/burger-logger">Repository</a></li>
+          <li>Reverse Engineering Code: describes the purpose of different pages of a model view controller (MVC) <a href="https://github.com/HowardDaniels/reverse-engineering-code">Repository</a></li>
+          <li>Movie Magic: searches for movies and fellow movie buffs through an API <a href="https://infinite-inlet-20359.herokuapp.com/">Link</a> <a href="https://github.com/HowardDaniels/movie-magic">Repository</a></li>
           </ul>
           </div>
           <br>
