added fitness tracker to portfolio

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
      <div class="text-wrap bd-highlight">
         <p class="text-center">
 
-          <img src="assets/images/linkedinprofile.png" id="profile">
+          <img src="assets/i
+          mages/linkedinprofile.png" id="profile">
           <p class="body-text">I am currently attending the George Washington University coding boot camp in Arlington, VA. I am relatively new to coding, and I am taking the course to enter into the IT field.</p>
           <p class="body-text">I graduated from Roanoke College with a Bachelor of Arts in International Relations in 2018. I have lived in Roanoke, Virginia; Wilmington, Delaware; and Alexandria, Virginia.</p>
           <p class="body-text">In addition to learning to be a full-stack developer, I speak fluent German, and my goal is to work as a developer in a German-speaking country.</p>
