--- a/portfolio.html
+++ b/portfolio.html
@@ -119,7 +119,7 @@
 
           <div class="col-md-2" id="project-box-13">
             <div class="name-banner">
-              <!-- <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 13: Developer Profile Generator</a> -->
+              <a href="https://github.com/HowardDaniels/fitness-tracker">Project 13: Fitness Tracker</a>
             </div>
           </div>
 
