added progressive budget and user directory

--- a/portfolio.html
+++ b/portfolio.html
@@ -125,13 +125,13 @@
 
           <div class="col-md-2" id="project-box-14">
             <div class="name-banner">
-              <!-- <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 14: Developer Profile Generator</a> -->
+              <a href="https://github.com/HowardDaniels/progressive-budget">Project 14: Progressive Budget</a>
             </div>
           </div>
 
           <div class="col-md-2" id="project-box-15">
             <div class="name-banner">
-              <!-- <a href="https://github.com/HowardDaniels/developer-profile-generator">Project 15: Developer Profile Generator</a> -->
+              <a href="https://github.com/HowardDaniels/user-directory">Project 15: User Directory</a>
             </div>
           </div>
 
